// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./SeverityIcon.stories AllGrades 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiStack-root mui-style-1sos3zc-MuiStack-root"
  >
    <svg
      aria-hidden="true"
      aria-label="Critical"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-ia47z7-MuiSvgIcon-root"
      data-testid="DangerousRoundedIcon"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M14.9 3H9.1c-.53 0-1.04.21-1.42.59l-4.1 4.1C3.21 8.06 3 8.57 3 9.1v5.8c0 .53.21 1.04.59 1.41l4.1 4.1c.37.38.88.59 1.41.59h5.8c.53 0 1.04-.21 1.41-.59l4.1-4.1c.38-.37.59-.88.59-1.41V9.1c0-.53-.21-1.04-.59-1.41l-4.1-4.1c-.37-.38-.88-.59-1.41-.59m.64 12.54c-.39.39-1.02.39-1.41 0L12 13.41l-2.12 2.12c-.39.39-1.02.39-1.41 0a.996.996 0 0 1 0-1.41L10.59 12 8.46 9.88a.996.996 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0L12 10.59l2.12-2.12c.39-.39 1.02-.39 1.41 0s.39 1.02 0 1.41L13.41 12l2.12 2.12c.4.39.4 1.03.01 1.42"
      />
    </svg>
    <svg
      aria-hidden="true"
      aria-label="At risk"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-1h48zqc-MuiSvgIcon-root"
      data-testid="ErrorOutlineRoundedIcon"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1s-1-.45-1-1V8c0-.55.45-1 1-1m-.01-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8m1-3h-2v-2h2z"
      />
    </svg>
    <svg
      aria-hidden="true"
      aria-label="Needs review"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-s6c3uv-MuiSvgIcon-root"
      data-testid="WarningAmberRoundedIcon"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 5.99 19.53 19H4.47zM2.74 18c-.77 1.33.19 3 1.73 3h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0zM11 11v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1m0 5h2v2h-2z"
      />
    </svg>
    <svg
      aria-hidden="true"
      aria-label="Healthy"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-189vbe6-MuiSvgIcon-root"
      data-testid="CheckCircleOutlineRoundedIcon"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m3.88-11.71L10 14.17l-1.88-1.88a.996.996 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7c.39-.39.39-1.02 0-1.41s-1.03-.39-1.42 0"
      />
    </svg>
  </div>
</div>
`;

exports[`./SeverityIcon.stories Clear 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-189vbe6-MuiSvgIcon-root"
    data-testid="CheckCircleOutlineRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m3.88-11.71L10 14.17l-1.88-1.88a.996.996 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7c.39-.39.39-1.02 0-1.41s-1.03-.39-1.42 0"
    />
  </svg>
</div>
`;

exports[`./SeverityIcon.stories CriticalIssue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-ia47z7-MuiSvgIcon-root"
    data-testid="DangerousRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M14.9 3H9.1c-.53 0-1.04.21-1.42.59l-4.1 4.1C3.21 8.06 3 8.57 3 9.1v5.8c0 .53.21 1.04.59 1.41l4.1 4.1c.37.38.88.59 1.41.59h5.8c.53 0 1.04-.21 1.41-.59l4.1-4.1c.38-.37.59-.88.59-1.41V9.1c0-.53-.21-1.04-.59-1.41l-4.1-4.1c-.37-.38-.88-.59-1.41-.59m.64 12.54c-.39.39-1.02.39-1.41 0L12 13.41l-2.12 2.12c-.39.39-1.02.39-1.41 0a.996.996 0 0 1 0-1.41L10.59 12 8.46 9.88a.996.996 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0L12 10.59l2.12-2.12c.39-.39 1.02-.39 1.41 0s.39 1.02 0 1.41L13.41 12l2.12 2.12c.4.39.4 1.03.01 1.42"
    />
  </svg>
</div>
`;

exports[`./SeverityIcon.stories Inconclusive 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-1u9ide0-MuiSvgIcon-root"
    data-testid="HelpOutlineRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m-1-4h2v2h-2zm1.61-9.96c-2.06-.3-3.88.97-4.43 2.79-.18.58.26 1.17.87 1.17h.2c.41 0 .74-.29.88-.67.32-.89 1.27-1.5 2.3-1.28.95.2 1.65 1.13 1.57 2.1-.1 1.34-1.62 1.63-2.45 2.88 0 .01-.01.01-.01.02-.01.02-.02.03-.03.05-.09.15-.18.32-.25.5-.01.03-.03.05-.04.08-.01.02-.01.04-.02.07-.12.34-.2.75-.2 1.25h2c0-.42.11-.77.28-1.07.02-.03.03-.06.05-.09.08-.14.18-.27.28-.39.01-.01.02-.03.03-.04.1-.12.21-.23.33-.34.96-.91 2.26-1.65 1.99-3.56-.24-1.74-1.61-3.21-3.35-3.47"
    />
  </svg>
</div>
`;

exports[`./SeverityIcon.stories Issue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-bby4eh-MuiSvgIcon-root"
    data-testid="ErrorOutlineRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 7c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1s-1-.45-1-1V8c0-.55.45-1 1-1m-.01-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8m1-3h-2v-2h2z"
    />
  </svg>
</div>
`;

exports[`./SeverityIcon.stories NotApplicable 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-17ah4bg-MuiSvgIcon-root"
    data-testid="RemoveCircleOutlineRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 12c0 .55.45 1 1 1h8c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1m5-10C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
    />
  </svg>
</div>
`;

exports[`./SeverityIcon.stories Partial 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-1h48zqc-MuiSvgIcon-root"
    data-testid="WarningAmberRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 5.99 19.53 19H4.47zM2.74 18c-.77 1.33.19 3 1.73 3h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0zM11 11v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1m0 5h2v2h-2z"
    />
  </svg>
</div>
`;
